WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159184
REGRESSION (
r189052
): Clipping occurs when using context menu to Look Up words within the Dictionary app
https://bugs.webkit.org/show_bug.cgi?id=159184
Summary
REGRESSION (r189052): Clipping occurs when using context menu to Look Up word...
Tim Horton
Reported
2016-06-27 17:27:13 PDT
REGRESSION (
r189052
): Clipping occurs when using context menu to Look Up words within the Dictionary app
Attachments
Patch
(8.62 KB, patch)
2016-06-27 17:27 PDT
,
Tim Horton
bdakin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-06-27 17:27:41 PDT
Created
attachment 282192
[details]
Patch
WebKit Commit Bot
Comment 2
2016-06-27 17:30:17 PDT
Attachment 282192
[details]
did not pass style-queue: ERROR: Source/WebKit/mac/WebView/WebImmediateActionController.mm:530: Place brace on its own line for function definitions. [whitespace/braces] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3
2016-06-27 17:32:26 PDT
Comment on
attachment 282192
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=282192&action=review
Any way to test this?
> Source/WebKit/mac/WebView/WebHTMLView.mm:6369 > + if (!selectionRange) > + return;
OK to continue if the range is empty?
Tim Horton
Comment 4
2016-06-27 17:38:40 PDT
(In reply to
comment #3
)
> Comment on
attachment 282192
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=282192&action=review
> > Any way to test this?
Even if we had TextIndicator tests, I'm not sure how we could test that this particular caller does the right thing. Maybe we could have a way to get the current indicator and actually call the context menu-y method on WebHTMLView? Anyway, TextIndicator is high on my list of things that desperately needs to be testable but currently isn't (and progress has been made in the past in this direction).
> > Source/WebKit/mac/WebView/WebHTMLView.mm:6369 > > + if (!selectionRange) > > + return; > > OK to continue if the range is empty?
The other function will catch that.
Tim Horton
Comment 5
2016-06-27 17:38:59 PDT
https://trac.webkit.org/changeset/202524
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug