REGRESSION (r189052): Clipping occurs when using context menu to Look Up words within the Dictionary app https://bugs.webkit.org/show_bug.cgi?id=159184 <rdar://problem/26370206>

Reviewed by Beth Dakin.

* WebView/WebHTMLView.mm:
(-[WebHTMLView _lookUpInDictionaryFromMenu:]):
* WebView/WebImmediateActionController.h:
* WebView/WebImmediateActionController.mm:
(+[WebImmediateActionController _dictionaryPopupInfoForRange:inFrame:withLookupOptions:indicatorOptions:transition:]):
(-[WebImmediateActionController _animationControllerForText]):
(dictionaryPopupInfoForRange): Deleted.
WebImmediateActionController's code to make a DictionaryPopupInfo and TextIndicator
from a Range in WebKit1 is much better than WebHTMLView's; use it in both cases.


Canonical link: https://commits.webkit.org/177275@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202524 268f45cc-cd09-0410-ab3c-d52691b4dbfc