Source/WebKit/mac/WebView/WebImmediateActionController.h
@@ -28,11 +28,19 @@
 #import "WebUIDelegatePrivate.h"
 #import <WebCore/HitTestResult.h>
 #import <WebCore/NSImmediateActionGestureRecognizerSPI.h>
+#import <WebCore/TextIndicator.h>
 #import <wtf/RetainPtr.h>
 
 @class DDActionContext;
 @class QLPreviewMenuItem;
+@class NSDictionary;
 @class WebView;
+
+namespace WebCore {
+class Frame;
+class Range;
+struct DictionaryPopupInfo;
+};
 
 @interface WebImmediateActionController : NSObject <NSImmediateActionGestureRecognizerDelegate> {
 @private
@@ -54,6 +62,8 @@
 - (void)webView:(WebView *)webView didHandleScrollWheel:(NSEvent *)event;
 
 - (NSImmediateActionGestureRecognizer *)immediateActionRecognizer;
+
++ (WebCore::DictionaryPopupInfo)_dictionaryPopupInfoForRange:(WebCore::Range&)range inFrame:(WebCore::Frame*)frame withLookupOptions:(NSDictionary *)lookupOptions indicatorOptions:(WebCore::TextIndicatorOptions)indicatorOptions transition:(WebCore::TextIndicatorPresentationTransition)presentationTransition;
 
 @end
 
